--- a/views/index.jade
+++ b/views/index.jade
@@ -1,5 +1,5 @@
-extends layout
+extends layout.jade
 
 block content
-  h1= title
-  p Welcome to #{title}
+  h3= title
+  p For more info type /nope in browser
