--- a/views/layout.jade
+++ b/views/layout.jade
@@ -3,6 +3,7 @@ html
     head
         title
         link(rel='stylesheet', href='/stylesheets/foundation.css')
+        link(rel='stylesheet', href='/stylesheets/webicons.css')
     body
         .top-bar
             .top-bar-left
