--- a/views/login.jade
+++ b/views/login.jade
@@ -26,3 +26,4 @@ block content
                                         };
                                 p.text-center
                                     a(href='/nope') Forgot password? that sucks
+                        a.webicon.facebook(href='#') derpaherp
