change to pokemon

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -12,9 +12,9 @@ html
                     li
                         a(href='/') Home
                     li
-                        a(href='/heroes') Heroes
+                        a(href='/pokemons') Heroes
                     li
-                        a(href='/herolocations') Locations
+                        a(href='/pokemonlocations') Locations
             .top-bar-right
                 ul.menu
                     li
