--- a/views/test.pug
+++ b/views/test.pug
@@ -1,6 +1,4 @@
-//
-   Created by alhric on 11-Jun-16.
-extends layout.jade
+extends layout.pug
 
 block content
     h3= title
@@ -8,4 +6,4 @@ block content
         .row
             .medium-12.large-centered.large-4.large-centered.columns
                 p #{planet}
-                img(src='#{planetImage}', alt='Mountain View')
+                img(src=planetImage, alt='http://kingofwallpapers.com/mountain-view/mountain-view-005.jpg')
