added missing files

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -12,9 +12,11 @@ html
                     li
                         a(href='/') Home
                     li
-                        a(href='/pokemons') Heroes
+                        a(href='/pokemons') Pokemon
                     li
                         a(href='/pokemonlocations') Locations
+                    li
+                        a(href='/apod') Nasa
             .top-bar-right
                 ul.menu
                     li
@@ -27,7 +29,7 @@ html
                             a(href="/signup") Sign Up
         block content
 
-        script(type='text/javascript', src='/javascripts/vendor/jquery.js')
-        script(type='text/javascript', src='/javascripts/vendor/foundation.js')
-        script(type='text/javascript', src='/javascripts/vendor/what-input.js')
+        script(type='text/javascript', src='/javascripts/jquery.js')
+        script(type='text/javascript', src='/javascripts/foundation.js')
+        script(type='text/javascript', src='/javascripts/what-input.js')
         script(type='text/javascript', src='/javascripts/app.js')
