trying with datepicker

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -4,6 +4,7 @@ html
         title
         link(rel='stylesheet', href='/stylesheets/foundation.css')
         link(rel='stylesheet', href='/stylesheets/webicons.css')
+        link(rel='stylesheet', href='/stylesheets/style.css')
     body
         .top-bar
             .top-bar-left
@@ -29,7 +30,7 @@ html
                             a(href="/signup") Sign Up
         block content
 
-        script(type='text/javascript', src='/javascripts/jquery.js')
-        script(type='text/javascript', src='/javascripts/foundation.js')
-        script(type='text/javascript', src='/javascripts/what-input.js')
-        script(type='text/javascript', src='/javascripts/app.js')
+        script(type='text/javascript', src='/javascript/jquery.js')
+        script(type='text/javascript', src='/javascript/foundation.js')
+        script(type='text/javascript', src='/javascript/what-input.js')
+        script(type='text/javascript', src='/javascript/foundation-datepicker.js')
