--- a/views/apod.pug
+++ b/views/apod.pug
@@ -2,8 +2,5 @@ extends layout.pug
 
 block content
     h3= title
-    mixin chooseDate()
-        +b.choose-date
-            +e.datepicker
-                input(type='text' placeholder='Pick a date')
-                +fontIcon({name: 'calendar'})
+    input#dp.span2(type='text', value='02/16/2012', data-date-format='dd/mm/yyyy')
+
