Adding user roles

--- a/views/login.pug
+++ b/views/login.pug
@@ -1,5 +1,3 @@
-//
-   Created by alhric on 01-Jun-16.
 extends layout.pug
 
 block content
@@ -11,7 +9,7 @@ block content
                             span.round.alert.label #{message}
                         form#login_form(action='/login', method='post')
                             .row.column.log-in-form
-                                h4.text-center Log in with your email adres
+                                h4.text-center Log in with your email address
                                 label
                                     | Email
                                     input#email(type='text', placeholder='somebody@example.com', name='email')
