--- a/views/apod.pug
+++ b/views/apod.pug
@@ -1,6 +1,6 @@
 extends layout.pug
 
 block content
-    h3= title
-    input#dp.span2(type='text', value='02/16/2012', data-date-format='dd/mm/yyyy')
+    h3=title
+    input#dp2.datepicker( data-date-format='dd/mm/yyyy')
 
