--- a/views/profile.pug
+++ b/views/profile.pug
@@ -1,6 +1,3 @@
-//
-   Created by alhric on 03-Jun-16.
-
 extends layout.pug
 
 block content
@@ -16,7 +13,7 @@ block content
                                 br
                                 strong email #{user.local.email}
                                 br
-                                strong password #{user.local.password}
+                                strong role #{user.local.role}
 
 
 
